--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
   "name": "tech_blog",
   "version": "1.0.0",
-  "description": "homepage: {\r     zblog posts displayed on cards from db\r         post title\r         date created\r         withAuth-\r         -click to open post on new view",
+  "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "watch": "nodemon server.js",
+    "seed": "node seeds/index.js"
+    
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "connect-session-sequelize": "^7.1.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-handlebars": "^7.0.1",
+    "express-session": "^1.17.3",
+    "mysql2": "^3.2.0",
     "sequelize": "^6.29.2"
   }
 }
