--- a/package.json
+++ b/package.json
@@ -4,23 +4,24 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-     "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "watch": "nodemon server.js",
     "seed": "node seeds/seed.js"
-    
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "bootstrap": "^5.2.3",
     "connect-session-sequelize": "^7.1.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.1",
     "express-session": "^1.17.3",
     "mysql2": "^3.2.0",
+    "nodemon": "^2.0.21",
     "sequelize": "^6.29.0"
   }
 }
